# icp_token_wallet

./: .gitignore  Cargo.toml  README.md  README.txt  dfx.json  icp_token_wallet.did  package-lock.json  package.json  webpack.config.js
src/: icp_token_wallet.did  lib.rs
src/declarations/icp_token_wallet_assets/: index.js
src/icp_token_wallet_assets/src/: index.html  index.js
src/tests/: .integration_tests.rs.icloud
